objects/vtse__Assessment_Feedback_Details__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Assessment_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Criteria</label>
        <referenceTo>vtse__Assessment_Criteria__c</referenceTo>
        <relationshipLabel>Assessment Feedback Details</relationshipLabel>
        <relationshipName>Assessment_Feedback_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Assessment_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Feedback</label>
        <referenceTo>vtse__Assessment_Feedback__c</referenceTo>
        <relationshipLabel>Assessment Feedback Details</relationshipLabel>
        <relationshipName>Assessment_Feedback_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Response__c</fullName>
        <label>Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vtse__Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assessment Feedback Details</relationshipLabel>
        <relationshipName>Assessment_Feedback_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Score__c</fullName>
        <label>Score</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vtse__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assessment Feedback Details (User)</relationshipLabel>
        <relationshipName>Assessment_Feedback_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assessment Feedback Details</label>
    <nameField>
        <displayFormat>AFD-{0}</displayFormat>
        <label>Assessment Feedback Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Feedback Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>